sort.pancake.BurnedPancake.scala.error
Compilation error:
BurnedPancake:16: error: not enough arguments for method isPancakeUpsideDown: (x$1: Int)Boolean.
Unspecified value parameter x$1.
    if(!isPancakeUpsideDown()){flip(1)}
                           ^